<resources>
    <string name="app_name">FT8CN</string>
    <string name="nav_menu_title_call_list">Content</string>
    <string name="nav_menu_title_decode_list">Decode</string>
    <string name="nav_menu_title_my_calling">Calling</string>
    <string name="nav_menu_title_history">QSO Logs</string>
    <string name="nav_menu_title_config">Settings</string>
    <string name="map_name" translatable="false">nightUSGS4Layer.sqlite</string>
    <string name="run_decode">Start decoding</string>
    <string name="db">dB</string>
    <string name="dt">Δt</string>
    <string name="locate">Position</string>
    <string name="message">Message</string>
    <string name="freq">Freq</string>
    <string name="decode">Decode</string>
    <string name="delete">Delete</string>
    <string name="sequence">S.</string>
    <string name="dist">Distance</string>
    <string name="location">Location</string>
    <string name="mycall">Callsign</string>
    <string name="pl_mycall">Please enter callsign</string>
    <string name="headGrid">Grid square</string>
    <string name="pl_grid">Please enter Maidenhead grid</string>
    <string name="decoding">Decoding…</string>
    <string name="send">TX</string>
    <string name="check">Check</string>
    <string name="sendFreq">TX Freq</string>
    <string name="sendDefaultFreq">Audio freq</string>
    <string name="pl_sendFreq">Audio freq range 0~2900</string>
    <string name="transmitting">TX …</string>
    <string name="synFrequency">Lockd TX=RX</string>
    <string name="spectrum">Spectrum</string>
    <string name="pl_trans_delay">Tx delay time (MS)</string>
    <string name="tran_delay">Tx delay</string>
    <string name="timeOffset">Time offset</string>
    <string name="help">Help</string>
    <string name="scroll_down">▾</string>
    <string name="about_me">About FT8CN</string>
    <string name="connectMode">Control</string>
    <string name="VOX">VOX</string>
    <string name="CAT">CAT</string>
    <string name="operationBand">Frequency</string>
    <string name="civ_address">CI-V</string>
    <string name="pl_civ_address">CI-V address of the rig</string>
    <string name="serial_port">Serial port</string>
    <string name="bau_rate">Baud rate</string>
    <string name="pl_select_serial_port">Please select serial port</string>
    <string name="close">Close</string>
    <string name="rig_name">Rig</string>
    <string name="debug">Debug</string>
    <string name="logo_image">FT8CN</string>
    <string name="RTS">RTS</string>
    <string name="FAQ">FAQ</string>
    <string name="launch_supervision">TX watchdog</string>
    <string name="no_response_count">No response</string>
    <string name="break_launch">stopped</string>
    <string name="follow_cq">Auto track CQ</string>
    <string name="auto_call_follow">Automatic call tracking</string>
    <string name="DTR">DTR</string>
    <string name="launch">TX</string>
    <string name="export">Export</string>
    <string name="view_style">View mode</string>
    <string name="ptt_delay">PTT delay</string>
    <string name="filter">Filter</string>
    <string name="pl_filter">Please select filter</string>
    <string name="filter_all">Show all</string>
    <string name="filter_is_qsl">Show confirmed</string>
    <string name="filter_none_qsl">Show unconfirmed</string>
    <string name="cable_connect">USB</string>
    <string name="bluetooth_connect">Bluetooth</string>
    <string name="cable_mode">Connection type</string>
    <string name="pl_select_bluetooth">Please select an available Bluetooth device</string>
    <string name="bluetooth_set">Bluetooth Settings</string>
    <string name="spp_device">Bluetooth spp device</string>
    <string name="headset_device">Bluetooth headset</string>
    <string name="disconnect_rig">The rig connection is broken</string>
    <string name="connected_rig">Rig connection succeeded.</string>
    <string name="current_frequency">Current frequency :%s</string>
    <string name="radio_communication_error">Communication error with rig：%s</string>
    <string name="does_not_support_recording">Bluetooth device does not support recording</string>
    <string name="bluetooth_headset_mode">Enter Bluetooth headset mode</string>
    <string name="bluetooth_Headset_mode_cancelled">Exit Bluetooth headset mode</string>
    <string name="version_info">FT8CN Ver %s\nBG7YOZ\n%s</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="exit_confirmation">Are you sure you want to exit ?</string>
    <string name="std_msg">Std Msg</string>
    <string name="none_std_msg">NonStd Call</string>
    <string name="free_text">Free Text</string>
    <string name="dXpedition">DXpedition</string>
    <string name="field_day">Field Day</string>
    <string name="telemetry">Telemetry</string>
    <string name="offset_time_sec">%.1f Secs</string>
    <string name="decoding_takes_milliseconds">Decoded : %d ms</string>
    <string name="sound_frequency_is_set_to">The sound frequency is %d Hz</string>
    <string name="de_noise">DeNoise</string>
    <string name="raw_spectrum_data">Original</string>
    <string name="markMessage">Show Msg</string>
    <string name="unMarkMessage">Hide Msg</string>
    <string name="select_bluetooth_device">Select Bluetooth device : %s</string>
    <string name="milliseconds">%d ms</string>
    <string name="ignore">Ignore</string>
    <string name="times">%d calls</string>
    <string name="sound_frequency_is">Freq : %.0f Hz</string>
    <string name="target_callsign">Target : %s</string>
    <string name="transmission_sequence">Sequential : %d</string>
    <string name="message_count">Messages(%d)</string>
    <string name="export_info">Please use the web browser of other devices to export from the background under the same LAN as this device.\nEnter the URL in the browser:\nhttp://%s:%d</string>
    <string name="minutes">%d Mins</string>
    <string name="freq_syn">Lockd TX=RX</string>
    <string name="freq_asyn">Tx/Rx Split</string>
    <string name="auto_follow_cq">Auto track CQ</string>
    <string name="not_concerned_about_CQ">No track CQ</string>
    <string name="automatic_call_following">Auto call tracked</string>
    <string name="do_not_call_the_following_callsign">No call tracked</string>
    <string name="message_count_count">Messages(%d/%d)</string>
    <string name="average_offset_seconds">Offset Avg : %.2f Sec</string>
    <string name="my_grid">Grid : %s</string>
    <string name="tracking_receiver">Tracking receiver %s(%s)</string>
    <string name="calling_receiver">Call receiver %s(%s)</string>
    <string name="reply_to">Reply %s(%s)</string>
    <string name="tracking">Tracking %s(%s)</string>
    <string name="calling">Call %s(%s)</string>
    <string name="distance">%.0f km</string>
    <string name="confirmed">Confirmed</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="lotw_confirmation">LoTW confirmed</string>
    <string name="manual_confirmation">Manually confirmed</string>
    <string name="log_start_time">Start time : %s</string>
    <string name="log_end_time">End time:%s</string>
    <string name="log_last_time">Last QSO:%s</string>
    <string name="log_grid">Grid : %s</string>
    <string name="log_mode">Mode : %s</string>
    <string name="log_cancel_confirmation">Cancel confirmation (%s)</string>
    <string name="log_manual_confirmation">Manual confirmation (%s)</string>
    <string name="qsl_grid">Gird:%s</string>
    <string name="qsl_start_time">Start time : %s</string>
    <string name="qsl_end_time">End time : %s</string>
    <string name="qsl_rst_rcvd">Rst received : %s</string>
    <string name="html_rst_rcvd">Rst received</string>
    <string name="qsl_rst_sent">Rst send : %s</string>
    <string name="html_rst_sent">Rst send</string>
    <string name="qsl_band">Band : %s</string>
    <string name="qsl_freq">Freq : %s</string>
    <string name="qsl_mode">Mode : %s</string>
    <string name="qsl_lotw_confirmation">LoTW confirmed</string>
    <string name="qsl_manual_confirmation">Manually confirmed</string>
    <string name="qsl_unconfirmed">Unconfirmed</string>
    <string name="qsl_cancel_confirmation">Cancel confirmation (%s)</string>
    <string name="qsl_manual_confirmation_s">Manual confirmation (%s)</string>
    <string name="qsl_qrz_confirmation_s">QRZ (%s)</string>
    <string name="qsl_record_import_time">Import time:%s</string>
    <string name="html_track_operation_information">Monitoring operation information</string>
    <string name="html_track_callsign_hash_table">Monitor callsign hash table</string>
    <string name="html_trace_parsed_messages">Monitor parsed messages</string>
    <string name="html_trace_callsign_and_grid_correspondence_table">Monitor the correspondence between call sign and grid</string>
    <string name="html_query_communication_message">Query QSO</string>
    <string name="html_query_configuration_information">Query configuration information</string>
    <string name="html_query_all_table">Query all data tables</string>
    <string name="html_manage_tracking_callsign">Manage tracked callsigns</string>
    <string name="html_manage_communication_callsigns">Manage QSO callsigns</string>
    <string name="html_show_communication_callsigns">Show QSO callsigns</string>
    <string name="html_export_log">Export log</string>
    <string name="html_import_log">Import log</string>
    <string name="html_to_the_third_party">Export log (for backup and log uploading to a third-party platform for confirmation)</string>
    <string name="html_from_jtdx_lotw">Export logs (used for backup, uploading logs to a third-party platform for confirmation, synchronizing JTDX logs and synchronizing LoTW for confirmation. It is recommended to use ADI data of JTDX, LoTW, Log32 and N1mm for synchronization)</string>
    <string name="html_return">Return</string>
    <string name="html_import_count">There are %d records in the ADI file and %d imported records . The format of %d logs is incorrect .</string>
    <string name="html_import_failed">Import failed! %s</string>
    <string name="html_illegal_command">Illegal command, upload failed!</string>
    <string name="html_callsign">Callsign</string>
    <string name="html_operation">Operation</string>
    <string name="html_delete">Delete</string>
    <string name="html_qsl_start_time">QSO start time</string>
    <string name="html_qsl_start_day">QSO start date</string>
    <string name="html_qsl_end_time">QSO end time</string>
    <string name="html_qsl_end_date">QSO end date</string>
    <string name="html_qsl_mode">Mode</string>
    <string name="html_qsl_grid">Grid</string>
    <string name="html_qsl_band">Band</string>
    <string name="html_qsl_freq">Freq</string>
    <string name="html_qsl_manual_confirmation">Manually confirmed</string>
    <string name="html_qsl_lotw_confirmation">LoTW确认</string>
    <string name="html_qsl_data_source">Data source</string>
    <string name="html_qsl_import_data_from_external">From external</string>
    <string name="html_qsl_native_data">Native</string>
    <string name="html_variable">Variables</string>
    <string name="html_value">Values</string>
    <string name="html_my_callsign">Callsign</string>
    <string name="html_my_grid">Grid</string>
    <string name="html_decodes_in_this_cycle">Number of decodes in this cycle</string>
    <string name="html_total_number_of_decodes">Total number of decodes</string>
    <string name="html_in_recording_state">Recording state</string>
    <string name="dxcc_image">dxcc</string>
    <string name="itu_image">itu zone</string>
    <string name="pl_select_flex_radio">Please select an available Flex Radio</string>
    <string name="flex_ip_addr">Ip</string>
    <string name="pl_input_flex_ip">Please input ip address</string>
    <string name="connect_flex">Connect FlexRadio</string>
    <string name="tracker_call_this">Call this callsign</string>
</resources>