<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_nav_calling_list"
        android:icon="@drawable/nav_calling_list_image"
        android:title="@string/nav_menu_title_decode_list" />
    <item
        android:id="@+id/menu_nav_mycalling"
        android:icon="@drawable/nav_my_calling_image"
        android:title="@string/nav_menu_title_my_calling" />
    <item
        android:id="@+id/menu_nav_spectrum"
        android:icon="@drawable/ic_nav_spectrum_24"
        android:title="@string/spectrum" />
    <item
        android:id="@+id/menu_nav_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/nav_menu_title_history" />
    <item
        android:id="@+id/menu_nav_config"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_menu_title_config" />
</menu>