<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/help_dialog_style"
    android:minWidth="300dp"
    android:minHeight="200dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/icon_background_style"
        android:contentDescription="@string/help"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ft8cn_icon" />

    <RadioGroup
        android:id="@+id/filterRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTextView">

        <RadioButton
            android:id="@+id/filterAllRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/filter_all"
            android:textColor="@color/help_dialog_text_color" />

        <RadioButton
            android:id="@+id/filterIsQSLRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/filter_is_qsl"
            android:textColor="@color/help_dialog_text_color" />

        <RadioButton
            android:id="@+id/filterNoneQSLRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/filter_none_qsl"
            android:textColor="@color/help_dialog_text_color" />
    </RadioGroup>

    <TextView
        android:id="@+id/filterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl_filter"
        android:textColor="@color/help_dialog_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />


</androidx.constraintlayout.widget.ConstraintLayout>