<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/select_bluetooth_dialog_style"
    android:minWidth="300dp"
    android:minHeight="200dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/icon_background_style"
        android:contentDescription="@string/help"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ft8cn_icon" />


    <TextView
        android:id="@+id/selectFlexHelpMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/pl_select_flex_radio"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/flexIpAddressConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/editor_layout_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectFlexHelpMessage">

        <TextView
            android:id="@+id/flexIpAddressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/flex_ip_addr"
            android:textAlignment="textEnd"
            android:textColor="@color/text_view_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/inputFlexAddressEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputFlexAddressEdit"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/inputFlexAddressEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp"
            android:autofillHints=""
            android:background="@drawable/editor_style"
            android:ems="10"
            android:hint="@string/pl_input_flex_ip"
            android:inputType="textPersonName|textCapCharacters"

            android:minHeight="32dp"
            android:textColor="@color/text_view_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/connectFlexImageButton"
            app:layout_constraintStart_toEndOf="@+id/flexIpAddressText"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/connectFlexImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/imagebutton_style"
            android:contentDescription="@string/connect_flex"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_link_24"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flexRadioListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flexIpAddressConstraintLayout"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/flexRadioScrollDownImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/help"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/flexRadioListRecyclerView"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />

    <ImageView
        android:id="@+id/flexRadioScrollUpImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/help"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/flexRadioListRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
</androidx.constraintlayout.widget.ConstraintLayout>