<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15321477" />

    <com.bg7yoz.ft8cn.ui.ColumnarView
        android:id="@+id/controlColumnarView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/spectrum"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlRulerFrequencyView"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.bg7yoz.ft8cn.ui.RulerFrequencyView
        android:id="@+id/controlRulerFrequencyView"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bg7yoz.ft8cn.ui.WaterfallView
        android:id="@+id/controlWaterfallView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/spectrum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <Switch
        android:id="@+id/controlDeNoiseSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="false"
        android:minHeight="48dp"
        android:text="@string/de_noise"
        android:textColor="@color/spectrum_switch_color"
        android:textSize="11sp"
        android:thumbTint="@color/spectrum_switch_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/controlWaterfallView"
        tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/controlShowMessageSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:checked="true"
        android:minHeight="48dp"
        android:splitTrack="false"
        android:text="@string/markMessage"
        android:textColor="@color/spectrum_switch_color"
        android:textSize="11sp"
        android:thumbTint="@color/spectrum_switch_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>