<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trackerMarkerConstraintLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="1dp"
    android:layout_marginTop="1dp"
    android:layout_marginRight="1dp"
    android:layout_marginBottom="1dp"
    android:background="@drawable/tracker_grid_info_win_style"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:stateListAnimator="@anim/click_button"
    tools:ignore="TouchTargetSizeCheck">

    <TextView
        android:id="@+id/tracker_marker_info_bubble_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/message_text_color"
        android:textSize="11sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/track_marker_from_cq_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="CQ BG7YOY BG7YOZ" />

    <TextView
        android:id="@+id/tracker_marker_info_bubble_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/message_text_color"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/tracker_marker_info_bubble_title"
        app:layout_constraintStart_toStartOf="@+id/tracker_marker_info_bubble_title"
        app:layout_constraintTop_toBottomOf="@+id/tracker_marker_info_bubble_title"
        tools:ignore="SmallSp"
        tools:text="-12" />

    <TextView
        android:id="@+id/tracker_marker_info_bubble_subdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/message_text_color"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="@+id/tracker_marker_info_bubble_title"
        app:layout_constraintStart_toStartOf="@+id/tracker_marker_info_bubble_title"
        app:layout_constraintTop_toBottomOf="@+id/tracker_marker_info_bubble_description"
        tools:ignore="SmallSp,TextContrastCheck"
        tools:text="-1800 km" />


    <ImageView
        android:id="@+id/track_marker_from_dxcc_image"
        android:layout_width="11dp"
        android:layout_height="11dp"
        android:contentDescription="@string/dxcc_image"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tracker_marker_info_bubble_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tracker_marker_info_bubble_title"
        app:srcCompat="@drawable/dxcc" />

    <ImageView
        android:id="@+id/track_marker_from_itu_image"
        android:layout_width="11dp"
        android:layout_height="11dp"
        android:contentDescription="@string/itu_image"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tracker_marker_info_bubble_title"
        app:layout_constraintStart_toEndOf="@+id/track_marker_from_dxcc_image"
        app:layout_constraintTop_toTopOf="@+id/tracker_marker_info_bubble_title"
        app:srcCompat="@drawable/itu" />

    <ImageView
        android:id="@+id/track_marker_from_cq_image"
        android:layout_width="11dp"
        android:layout_height="11dp"
        android:contentDescription="@string/itu_image"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tracker_marker_info_bubble_title"
        app:layout_constraintStart_toEndOf="@+id/track_marker_from_itu_image"
        app:layout_constraintTop_toTopOf="@+id/tracker_marker_info_bubble_title"
        app:srcCompat="@drawable/cqzone" />

    <ImageButton
        android:id="@+id/callThisImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/imagebutton_style"
        android:contentDescription="@string/tracker_call_this"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tracker_marker_info_bubble_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_send_white_48"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>